# first-class-coro-plugin

./: .travis.yml  CMakeLists.txt  README.md
include/fcct/Transformers/: CoroBuilder.h
lib/: CMakeLists.txt
lib/Transformers/: CMakeLists.txt  CoroBuilder.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/Basic/: Simple.C
tools/: CMakeLists.txt  ClangPlugin.cpp  ClangPlugin.h
